feat: add config import/export via clipboard
- /sba exportConfig [feature,feature,...] command with multi-select suggestions
- /sba importConfig command
- Export/Import buttons added to all SettingsGui screens per-feature
- "SBA:" prefix for format validation on import
- DevUtils.copyStringToClipboard signature:  String -> Component